# yashiki

./: CLAUDE.md  Cargo.toml  Info.plist.template  LICENSE  README.md  release-plz.toml
.github/workflows/: release-plz.yml  release.yml
docs/: layout-engine.md
scripts/: build-app.sh
tatami/: Cargo.toml
tatami/src/: main.rs
yashiki/: CHANGELOG.md  Cargo.toml
yashiki-ipc/: Cargo.toml
yashiki-ipc/src/: command.rs  layout.rs  lib.rs
yashiki-layout-byobu/: Cargo.toml
yashiki-layout-byobu-hybrid/: Cargo.toml
yashiki-layout-byobu-hybrid/src/: main.rs
yashiki-layout-byobu/src/: main.rs
yashiki-layout-tatami/: Cargo.toml
yashiki-layout-tatami/src/: main.rs
yashiki/src/: app.rs  effect.rs  event.rs  ipc.rs  layout.rs  main.rs  pid.rs  platform.rs
yashiki/src/app/: command.rs  effects.rs  focus.rs
yashiki/src/core/: display.rs  mod.rs  state.rs  tag.rs  window.rs
yashiki/src/core/state/: mod.rs  sync.rs  tags.rs
yashiki/src/ipc/: client.rs  mod.rs  server.rs
yashiki/src/macos/: accessibility.rs  display.rs  hotkey.rs  mod.rs  observer.rs  workspace.rs
